# fastapi-microservices

./: .gitignore  README.md  docker-compose.yml  pyproject.toml
cast-service/: Dockerfile  requirements.txt
cast-service/app/: main.py
cast-service/app/api/: casts.py
movie-service/: requirements.txt
movie-service/app/: main.py
movie-service/app/api/: db.py  movies.py
